--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,12 +25,15 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - uses: borales/actions-yarn@v2.0.0
+    - name: Install
+      uses: borales/actions-yarn@v2.0.0
       with:
-        cmd: install 
-    - uses: borales/actions-yarn@v2.0.0
+        cmd: install
+    - name: Build
+      uses: borales/actions-yarn@v2.0.0
       with:
         cmd: build
-    - uses: borales/actions-yarn@v2.0.0
+    - name: Test
+      uses: borales/actions-yarn@v2.0.0
       with:
         cmd: test
