--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,6 +17,13 @@
     "test": "react-scripts test",
     "lint": "eslint ."
   },
+  "pre-commit": [
+		"lint"
+	],
+	"pre-push": [
+		"lint",
+		"test"
+	],
   "eslintConfig": {
     "extends": "airbnb",
     "env": {
@@ -45,6 +53,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4 || ^3 || ^2.3.0 || ^1.7.0",
-    "web-vitals": "^1.0.1"
+    "pre-commit": "^1.2.2",
+    "pre-push": "^0.1.1"
   }
 }
