--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll=false",
+    "watch": "react-scripts test",
     "lint": "eslint ."
   },
   "pre-commit": [
