--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -19,12 +20,12 @@
     "lint": "eslint ."
   },
   "pre-commit": [
-		"lint"
-	],
-	"pre-push": [
-		"lint",
-		"test"
-	],
+    "lint"
+  ],
+  "pre-push": [
+    "lint",
+    "test"
+  ],
   "eslintConfig": {
     "extends": "airbnb",
     "env": {
@@ -32,7 +33,15 @@
       "jest": true
     },
     "rules": {
-      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+      "react/jsx-filename-extension": [
+        1,
+        {
+          "extensions": [
+            ".js",
+            ".jsx"
+          ]
+        }
+      ]
     }
   },
   "browserslist": {
