--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,11 +21,15 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Install dependencies
-      run: npm install
-
-    - name: Run the tests
-      run: npm test
-
+    - name: Install
+      uses: borales/actions-yarn@v2.0.0
+      with:
+        cmd: install
     - name: Build
-      run: npm run build
+      uses: borales/actions-yarn@v2.0.0
+      with:
+        cmd: build
+    - name: Test
+      uses: borales/actions-yarn@v2.0.0
+      with:
+        cmd: test
