--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "mobx": "^6.3.0",
+    "mobx-react": "^7.2.0",
     "mobx-react-lite": "^3.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -19,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
     "watch": "react-scripts test",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix"
   },
   "pre-commit": [
     "lint"
